@@ -1,14 +1,15 @@
 #!/usr/bin/python3
 
-from lintian_brush.systemd import update_service
+from lintian_brush.systemd import systemd_service_files, SystemdServiceUpdater
 
 
-def replace_var_run(section, name, value):
-    if section == "Service" and name == "PIDFile":
-        return value.replace("/var/run/", "/run/")
-    return value
+for path in systemd_service_files():
+    with SystemdServiceUpdater(path) as updater:
+        val = updater.file['Service']['PIDFile']
+        if isinstance(val, str):
+            updater.file['Service']['PIDFile'] = val.replace(
+                "/var/run/", "/run/")
 
 
-update_service(replace_var_run)
 print("Replace /var/run with /run for the Service PIDFile.")
 print("Fixed-Lintian-Tags: systemd-service-file-pidfile-refers-to-var-run")
